versioned_docs/version-2026.1.1/professor/josiane_hammes.mdx


---
sidebar_label: 'Josiane Hammes'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Josiane Hammes",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Biologia II - 2535",
          "size": 1,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Lingua estrangeira - Inglês - 2559",
          "size": 1,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Biologia III - 2536",
          "size": 2,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Biologia I - 2534",
          "size": 2,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Lingua estrangeira - Inglês - 2559",
          "size": 1,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Biologia II - 2535",
          "size": 1,
          "teachers": [
            "Josiane Hammes"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Josiane Hammes

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

